--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,9 @@ description = """Debug any value without trait bounds using specialization (Rust
 license = "Apache-2.0/MIT"
 documentation = "https://docs.rs/debugit/"
 
+build = "build.rs"
+
+[build-dependencies]
+rustc_version = "0.1.7"
+
 [dependencies]
