--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "debugit"
 version = "0.1.0"
 authors = ["bluss"]
 
-description = """Debug any value without trait bounds using specialization (Rust nightly channel)"""
+description = """Debug-print any value without trait bounds using specialization (Rust nightly channel)"""
 license = "Apache-2.0/MIT"
 documentation = "https://docs.rs/debugit/"
 repository = "https://github.com/bluss/debugit"
