--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ repository = "https://github.com/bluss/debugit"
 build = "build.rs"
 
 [build-dependencies]
-rustc_version = "0.1.7"
+version_check = "0.1"
 
 [dependencies]
