--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ language: rust
 sudo: false
 matrix:
   include:
+    - rust: 1.15.0
     - rust: stable
-      env:
-      - NOTEST=1
     - rust: nightly
 branches:
   only:
@@ -12,4 +11,4 @@ branches:
 script:
   - |
       cargo build --verbose --features "$FEATURES" &&
-      ([ "$NOTEST" = 1 ] || cargo test --verbose --features "$FEATURES")
+      cargo test --verbose --features "$FEATURES"
